# levi-ecs

./: .clangd  .gitignore  CMakeLists.txt  NOTE.md  README.md  TODO.md  compile_commands.json  doc.md  third_party.md
.cache/clangd/index/: Engine.cpp.328D38DC38B45AB9.idx  Engine.cpp.39D848AE73F555CD.idx  Engine.h.D37D8B6C5A7151B9.idx  Engine.h.F5AB39D4B2478A04.idx  main.cpp.4E86C226C9B9B2B8.idx  main.cpp.BD2D3A309F8DC01A.idx
editor/: CMakeLists.txt
editor/src/: Inspector.cpp  Inspector.h  ProjectExplorer.cpp  ProjectExplorer.h  SceneHierarchy.cpp  SceneHierarchy.h  main.cpp
engine/: CMakeLists.txt
engine/include/Levi/: AssetManager.h  Components.h  Engine.h  LuaScriptManager.h  Math.h
engine/src/: AssetManager.cpp  Engine.cpp  LuaScriptManager.cpp
projects/demo-project/: .luarc.json
projects/demo-project/editor-configs/: imgui.ini
projects/demo-project/scripts/: main.lua
projects/demo-project/scripts/levi-api/: ecs.lua
projects/demo-project/src/: game_logic.cpp
scripts/: build.ps1  build.sh
